Adding files 25/June/2025

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1530826595\testng-customsuite.xml</span>
+                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--1981608973\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day5.ParsingComplexResponseJson" class="method navigator-link" hash-for-method="testUserDetailsValidation">testUserDetailsValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day5.AssignmentParsingComplexResponseJson" class="method navigator-link" hash-for-method="testPreferencesAndMetadataValidation">testPreferencesAndMetadataValidation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day5.AssignmentParsingComplexResponseJson" class="method navigator-link" hash-for-method="testRecentOrdersValidation">testRecentOrdersValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day5.ParsingComplexResponseJson</span>
+              <span class="class-name">day5.AssignmentParsingComplexResponseJson</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testUserDetailsValidation">
-                  </a> <!-- testUserDetailsValidation -->
-                  <span class="method-name">testUserDetailsValidation</span>
+                  <a name="testPreferencesAndMetadataValidation">
+                  </a> <!-- testPreferencesAndMetadataValidation -->
+                  <span class="method-name">testPreferencesAndMetadataValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testRecentOrdersValidation">
+                  </a> <!-- testRecentOrdersValidation -->
+                  <span class="method-name">testRecentOrdersValidation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1530826595\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--1981608973\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day5.ParsingComplexResponseJson&quot;/&gt;
+      &lt;class name=&quot;day5.AssignmentParsingComplexResponseJson&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,11 +197,15 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testUserDetailsValidation')
-data.setCell(0, 2, 'day5.ParsingComplexResponseJson')
-data.setCell(0, 3, 1596);
+data.setCell(0, 1, 'testRecentOrdersValidation')
+data.setCell(0, 2, 'day5.AssignmentParsingComplexResponseJson')
+data.setCell(0, 3, 1687);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testPreferencesAndMetadataValidation')
+data.setCell(1, 2, 'day5.AssignmentParsingComplexResponseJson')
+data.setCell(1, 3, 88);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -220,10 +236,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day5.ParsingComplexResponseJson</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">day5.AssignmentParsingComplexResponseJson</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testUserDetailsValidation</span>
+                <span class="method-name">testRecentOrdersValidation</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testPreferencesAndMetadataValidation</span>
+                <span class="method-start">1697 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
