--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1672431184\testng-customsuite.xml</span>
+                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1359018810\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day6.LabAssignmentParsingJsonResponse" class="method navigator-link" hash-for-method="testSimpleJsonParsingValidation">testSimpleJsonParsingValidation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day6.LabAssignmentParsingJsonResponse" class="method navigator-link" hash-for-method="testnestedJsonParsingValidation">testnestedJsonParsingValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day7.SchemaValidations" class="method navigator-link" hash-for-method="testXmlSchema">testXmlSchema</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day6.LabAssignmentParsingJsonResponse</span>
+              <span class="class-name">day7.SchemaValidations</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSimpleJsonParsingValidation">
-                  </a> <!-- testSimpleJsonParsingValidation -->
-                  <span class="method-name">testSimpleJsonParsingValidation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testnestedJsonParsingValidation">
-                  </a> <!-- testnestedJsonParsingValidation -->
-                  <span class="method-name">testnestedJsonParsingValidation</span>
+                  <a name="testXmlSchema">
+                  </a> <!-- testXmlSchema -->
+                  <span class="method-name">testXmlSchema</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1672431184\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1359018810\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day6.LabAssignmentParsingJsonResponse&quot;/&gt;
+      &lt;class name=&quot;day7.SchemaValidations&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testSimpleJsonParsingValidation')
-data.setCell(0, 2, 'day6.LabAssignmentParsingJsonResponse')
-data.setCell(0, 3, 1395);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testnestedJsonParsingValidation')
-data.setCell(1, 2, 'day6.LabAssignmentParsingJsonResponse')
-data.setCell(1, 3, 238);
+data.setCell(0, 1, 'testXmlSchema')
+data.setCell(0, 2, 'day7.SchemaValidations')
+data.setCell(0, 3, 2792);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,14 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day6.LabAssignmentParsingJsonResponse</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">day7.SchemaValidations</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testSimpleJsonParsingValidation</span>
+                <span class="method-name">testXmlSchema</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testnestedJsonParsingValidation</span>
-                <span class="method-start">1405 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
