Adding files on 7-July-2025

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,843</td><td></td><td></td></tr>
+<tr><th colspan="8">chaining APIs</th></tr>
+<tr><td><a href="#t0">chaining tests</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">93,066</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">day7.SchemaValidations</td><td><a href="#m0">testXmlSchema</a></td><td rowspan="1">1751106443698</td><td rowspan="1">2792</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">chaining APIs</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chaining tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">day8.CreateUserTest</td><td><a href="#m0">createUser</a></td><td rowspan="1">1751885336559</td><td rowspan="1">25554</td></tr><tr class="passedodd"><td rowspan="1">day8.DeleteUserTest</td><td><a href="#m1">deleteUser</a></td><td rowspan="1">1751885406921</td><td rowspan="1">22653</td></tr><tr class="passedeven"><td rowspan="1">day8.GetUserTest</td><td><a href="#m2">GetUser</a></td><td rowspan="1">1751885362125</td><td rowspan="1">22406</td></tr><tr class="passedodd"><td rowspan="1">day8.UpdateUserTest</td><td><a href="#m3">UpdateUser</a></td><td rowspan="1">1751885384539</td><td rowspan="1">22376</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">day7.SchemaValidations#testXmlSchema</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>chaining tests</h2><h3 id="m0">day8.CreateUserTest#createUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@54bff557</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">day8.DeleteUserTest#deleteUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@54bff557</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">day8.GetUserTest#GetUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@54bff557</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">day8.UpdateUserTest#UpdateUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@54bff557</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
