--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1148013584\testng-customsuite.xml</span>
+                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--536940798\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,26 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getAllEmployess">getAllEmployess</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getEmployeesbyId">getEmployeesbyId</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getFemaleEmployess">getFemaleEmployess</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getFirstname">getFirstname</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getLastname">getLastname</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -138,6 +158,34 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="getEmployeesbyId">
+                  </a> <!-- getEmployeesbyId -->
+                  <span class="method-name">getEmployeesbyId</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getFemaleEmployess">
+                  </a> <!-- getFemaleEmployess -->
+                  <span class="method-name">getFemaleEmployess</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getFirstname">
+                  </a> <!-- getFirstname -->
+                  <span class="method-name">getFirstname</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getLastname">
+                  </a> <!-- getLastname -->
+                  <span class="method-name">getLastname</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="getMaleEmployess">
                   </a> <!-- getMaleEmployess -->
                   <span class="method-name">getMaleEmployess</span>
@@ -148,7 +196,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-1148013584\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--536940798\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,20 +245,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'getAllEmployess')
 data.setCell(0, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(0, 3, 2877);
+data.setCell(0, 3, 1748);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'getMaleEmployess')
 data.setCell(1, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(1, 3, 68);
+data.setCell(1, 3, 55);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'getFemaleEmployess')
+data.setCell(2, 2, 'day9.RequestAndResponseSpecification')
+data.setCell(2, 3, 43);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'getFirstname')
+data.setCell(3, 2, 'day9.RequestAndResponseSpecification')
+data.setCell(3, 3, 38);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'getEmployeesbyId')
+data.setCell(4, 2, 'day9.RequestAndResponseSpecification')
+data.setCell(4, 3, 35);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'getLastname')
+data.setCell(5, 2, 'day9.RequestAndResponseSpecification')
+data.setCell(5, 3, 34);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,13 +301,33 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">day9.RequestAndResponseSpecification</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">getAllEmployess</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">630 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getMaleEmployess</span>
-                <span class="method-start">2884 ms</span>
+                <span class="method-start">2390 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getFemaleEmployess</span>
+                <span class="method-start">2448 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getFirstname</span>
+                <span class="method-start">2493 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getLastname</span>
+                <span class="method-start">2533 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getEmployeesbyId</span>
+                <span class="method-start">2583 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
