--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--536940798\testng-customsuite.xml</span>
+                    <span>C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-11724454\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,32 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getAllEmployess">getAllEmployess</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day10.CreateBookingDataDrivenTest" class="method navigator-link" hash-for-method="createBookingTest(Jim, Brown, 111, true, 2018-01-01, 2019-01-01, Breakfast)">createBookingTest(Jim, Brown, 111, true, 2018-01-01, 2019-01-01, Breakfast)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getEmployeesbyId">getEmployeesbyId</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day10.CreateBookingDataDrivenTest" class="method navigator-link" hash-for-method="createBookingTest(Lisa, Smith, 150, false, 2022-05-01, 2022-05-15, Lunch)">createBookingTest(Lisa, Smith, 150, false, 2022-05-01, 2022-05-15, Lunch)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getFemaleEmployess">getFemaleEmployess</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getFirstname">getFirstname</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getLastname">getLastname</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day9.RequestAndResponseSpecification" class="method navigator-link" hash-for-method="getMaleEmployess">getMaleEmployess</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day10.CreateBookingDataDrivenTest" class="method navigator-link" hash-for-method="createBookingTest(Tom, Hanks, 200, true, 2023-03-10, 2023-03-20, Dinner)">createBookingTest(Tom, Hanks, 200, true, 2023-03-10, 2023-03-20, Dinner)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -146,49 +131,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day9.RequestAndResponseSpecification</span>
+              <span class="class-name">day10.CreateBookingDataDrivenTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAllEmployess">
-                  </a> <!-- getAllEmployess -->
-                  <span class="method-name">getAllEmployess</span>
+                  <a name="createBookingTest(Jim, Brown, 111, true, 2018-01-01, 2019-01-01, Breakfast)">
+                  </a> <!-- createBookingTest(Jim, Brown, 111, true, 2018-01-01, 2019-01-01, Breakfast) -->
+                  <span class="method-name">createBookingTest</span>
+                  <span class="parameters">(Jim,Brown,111,true,2018-01-01,2019-01-01,Breakfast)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getEmployeesbyId">
-                  </a> <!-- getEmployeesbyId -->
-                  <span class="method-name">getEmployeesbyId</span>
+                  <a name="createBookingTest(Lisa, Smith, 150, false, 2022-05-01, 2022-05-15, Lunch)">
+                  </a> <!-- createBookingTest(Lisa, Smith, 150, false, 2022-05-01, 2022-05-15, Lunch) -->
+                  <span class="method-name">createBookingTest</span>
+                  <span class="parameters">(Lisa,Smith,150,false,2022-05-01,2022-05-15,Lunch)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getFemaleEmployess">
-                  </a> <!-- getFemaleEmployess -->
-                  <span class="method-name">getFemaleEmployess</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getFirstname">
-                  </a> <!-- getFirstname -->
-                  <span class="method-name">getFirstname</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getLastname">
-                  </a> <!-- getLastname -->
-                  <span class="method-name">getLastname</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getMaleEmployess">
-                  </a> <!-- getMaleEmployess -->
-                  <span class="method-name">getMaleEmployess</span>
+                  <a name="createBookingTest(Tom, Hanks, 200, true, 2023-03-10, 2023-03-20, Dinner)">
+                  </a> <!-- createBookingTest(Tom, Hanks, 200, true, 2023-03-10, 2023-03-20, Dinner) -->
+                  <span class="method-name">createBookingTest</span>
+                  <span class="parameters">(Tom,Hanks,200,true,2023-03-10,2023-03-20,Dinner)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -196,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse--536940798\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Madhukar Pandey\AppData\Local\Temp\testng-eclipse-11724454\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -205,7 +172,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day9.RequestAndResponseSpecification&quot;/&gt;
+      &lt;class name=&quot;day10.CreateBookingDataDrivenTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -245,36 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getAllEmployess')
-data.setCell(0, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(0, 3, 1748);
+data.setCell(0, 1, 'createBookingTest')
+data.setCell(0, 2, 'day10.CreateBookingDataDrivenTest')
+data.setCell(0, 3, 5639);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getMaleEmployess')
-data.setCell(1, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(1, 3, 55);
+data.setCell(1, 1, 'createBookingTest')
+data.setCell(1, 2, 'day10.CreateBookingDataDrivenTest')
+data.setCell(1, 3, 1747);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'getFemaleEmployess')
-data.setCell(2, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(2, 3, 43);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'getFirstname')
-data.setCell(3, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(3, 3, 38);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'getEmployeesbyId')
-data.setCell(4, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(4, 3, 35);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'getLastname')
-data.setCell(5, 2, 'day9.RequestAndResponseSpecification')
-data.setCell(5, 3, 34);
+data.setCell(2, 1, 'createBookingTest')
+data.setCell(2, 2, 'day10.CreateBookingDataDrivenTest')
+data.setCell(2, 3, 1694);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -300,34 +255,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day9.RequestAndResponseSpecification</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">day10.CreateBookingDataDrivenTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">createBookingTest(Jim, Brown, 111, true, 2018-01-01, 2019-01-01, Breakfast)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">getAllEmployess</span>
-                <span class="method-start">630 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getMaleEmployess</span>
-                <span class="method-start">2390 ms</span>
+                <span class="method-name">createBookingTest(Lisa, Smith, 150, false, 2022-05-01, 2022-05-15, Lunch)</span>
+                <span class="method-start">5642 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getFemaleEmployess</span>
-                <span class="method-start">2448 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getFirstname</span>
-                <span class="method-start">2493 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getLastname</span>
-                <span class="method-start">2533 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getEmployeesbyId</span>
-                <span class="method-start">2583 ms</span>
+                <span class="method-name">createBookingTest(Tom, Hanks, 200, true, 2023-03-10, 2023-03-20, Dinner)</span>
+                <span class="method-start">7339 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
